feat: Frontend API integration fixes + Docker deployment setup
- Fixed API client to handle public endpoints without authentication
- Added smart fallback to apiPublicFetch for GET requests (events, categories, colleges)
- Updated CORS configuration to allow frontend port 9002
- Improved error handling in supabase-auth-provider
- Created unified launcher scripts (start-festify.ps1/bat)
- Added comprehensive API integration test script
- Optimized Dockerfile for production deployment
- Added docker-compose.yml for easy deployment
- Created .dockerignore and .env.example for Docker
- Multi-stage build with Alpine Linux (smaller image)
- Non-root user for security
- Health checks and resource limits configured

Test Results: 9/10 API endpoints passing (90% - CORS requires restart)